@@ -1,3 +1,7 @@
+2007-09-07  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c: Better doc strings throughout.
+
 2007-09-06  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile (doc): New rule.
